# DynamicStereo

./: README.md
code/: CMakeLists.txt  loadWarped.m  run_segmentation.py  run_stereo.py
code/AutoCinemagraph/: CMakeLists.txt  auto_cinemagraph.cpp  auto_cinemagraph.h  auto_cinemagraph_cli.cpp
code/CineViewer/: CineViewer.pro  main.cpp
code/Cinemagraph/: CMakeLists.txt  cinemagraph.cpp  cinemagraph.h  cinemagraph_cli.cpp  cinemagraph_util.cpp  cinemagraph_util.h
code/CudaVision/: CMakeLists.txt  cuCamera.h  cuStereoMatching.h  cuStereoUtil.h  cudaStereoMatching.cu  cuda_stereo_test.cpp
code/CudaVison/: CMakeLists.txt  cuda_stereo.cpp  cuda_stereo.h  cuda_stereo_test.cpp
code/DataConvert/: CMakeLists.txt  dataconvert_cli.cpp
code/DynamicConfidence/: CMakeLists.txt  dynamic_confidence.cpp  dynamic_confidence.h  dynamic_confidence_cli.cpp
code/DynamicStereo/: CMakeLists.txt  MRFDefinition.cpp  TRBPOptimize.cpp  cudaWrapper.cu  cudaWrapper.h  dynamic_utility.cpp  dynamic_utility.h  dynamicregularizer.cpp  dynamicregularizer.h  dynamicsegment.cpp  dynamicsegment.h  dynamicsegment_display.cpp  dynamicsegment_flashy.cpp  dynamicstereo.cpp  dynamicstereo.h  dynamicstereo_cli.cpp  dynamicwarpping.cpp  dynamicwarpping.h  fusion.cpp  gridenergy.h  gridwarpping.cpp  gridwarpping.h  local_matcher.cpp  local_matcher.h  matchingCostGPU.cu  model.h  optimization.h  optimization_TRBP.cpp  optimization_TRWS.cpp  optimization_firstorder.cpp  optimization_fusionmove.cpp  proposal.cpp  proposal.h  proposal_SfM.cpp  segment.cpp  stabilization.cpp  stabilization.h  unused.cpp  warpping.cpp
code/GeometryModule/: CMakeLists.txt  dynamic_utility.cpp  dynamicwarpping.cpp  dynamicwarpping.h  sfmmodel.cpp  sfmmodel.h  stereomodel.cpp  stereomodel.h
code/HoughForest/: CMakeLists.txt  hough_forest.cpp  hough_forest.h  houghforest_cli.cpp
code/Line/: CMakeLists.txt  lineSeg.cpp  lineSeg.h  line_cli.cpp
code/MLModule/: CMakeLists.txt  CVdescriptor.cpp  CVdescriptor.h  descriptor.h  detectimage.cpp  detectimage.h  ml_test.cpp  mlutility.cpp  mlutility.h  regiondescriptor.cpp  regiondescriptor.h  type_def.h
code/MRF2.2/: GCoptimization.cpp
code/MergeSegmentation/: CMakeLists.txt  mergesegmentation.cpp  mergesegmentation.h  mergesegmentation_cli.cpp
code/RandomForest/: CMakeLists.txt  randomforest.cpp  randomforest.h  randomforest_cli.cpp
code/SegmentAndRender/: CMakeLists.txt  RPCA.cpp  RPCA.h  dynamicregularizer.cpp  dynamicregularizer.h  dynamicsegment.h  dynamicsegment_display.cpp  dynamicsegment_flashy.cpp  gcgraph.hpp  mfgrabcut.cpp  mfgrabcut2.cpp  render_test.cpp  segment_render_cli.cpp  stab_energy.h  stabilization.cpp  stabilization.h  stabilization_flow.cpp  stabilization_grid.cpp  stabilization_track.cpp
code/SfM/: CMakeLists.txt  SfM_cli.cpp  command_line_helpers.h
code/SubspaceStab/: CMakeLists.txt  Subspace_test.cpp  factorization.cpp  main.cpp  subspacestab.cpp  subspacestab.h  tracking.cpp  tracking.h  warping.cpp  warping.h
code/TrainData/: CMakeLists.txt  traindata.cpp  traindata.h  traindata_cli.cpp
code/VideoSegmentation/: CMakeLists.txt  colorGMM.cpp  colorGMM.h  colorGMMcu.cu  distance_metric.h  gcgraph.hpp  mfgrabcut2.cpp  pixel_feature.cpp  pixel_feature.h  region_feature.cpp  region_feature.h  types.h  videosegmentation.cpp  videosegmentation.h  videosegmentation_cli.cpp  videosegmentation_test.cpp
code/Viewer/: CMakeLists.txt  blend.frag  blend.vert  frame.vert  framerecorder.cpp  framerecorder.h  main.cpp  main_widget.cpp  main_widget.h  navigation.cpp  navigation.h  scene.cpp  scene.h  videorenderer.cpp  videorenderer.h  viewer.pro
code/VisualWord/: CMakeLists.txt  visualword.cpp  visualword.h  visualword_cli.cpp  visualword_cli.cpp.cpp
code/base/: CGHelper.cpp  CGHelper.h  CMakeLists.txt  SLIC.cpp  camera.cpp  camera.h  camera_utli.cpp  camera_utli.h  colorwheel.cpp  colorwheel.h  configurator.cpp  configurator.h  depth.cpp  depth.h  display_corner.h  file_io.h  frame.cpp  frame.h  meanshift.cpp  meanshift.h  opticalflow.cpp  opticalflow.h  plane3D.cpp  plane3D.h  pointcloud.cpp  pointcloud.h  quad.cpp  quad.h  quad_util.cpp  quad_util.h  simplePly.cpp  simplePly.h  superpixel.cpp  superpixel.h  utility.cpp  utility.h
code/base/OpticalFlow/: CMakeLists.txt  Image.h  ImageIO.h  ImageProcessing.h  NoiseModel.h  OpticalFlow.cpp  OpticalFlow.h  Stochastic.h  project.h
code/classifier/: CMakeLists.txt  classifier.cpp  classifier.h  classifier_cli.cpp  classifier_test.cpp
code/common/: CMakeLists.txt  CVdescriptor.cpp  CVdescriptor.h  HoG3D.cpp  HoG3D.h  common_test.cpp  descriptor.cpp  descriptor.h  descriptor_test.cpp  dynamic_utility.cpp  dynamic_utility.h  dynamicwarpping.cpp  dynamicwarpping.h  regiondescriptor.cpp  regiondescriptor.h  stereomodel.h
code/contour_dev/: CMakeLists.txt  contourdev.cpp  contourdev.h  contourdev_cli.cpp
code/extractFeature/: CMakeLists.txt  RegionDescriptor.cpp  RegionDescriptor.h  descriptor.cpp  descriptor.h  descriptor_test.cpp  extracfeature.h  extractfeature.cpp  extractfeature_cli.cpp  regiondescriptor.cpp  regiondescriptor.h
code/matlab/: fourierConf.m
code/randomForest/: CMakeLists.txt  randomforest.cpp  randomforest.h  randomforest_cli.cpp
code/scripts/: convertSample.py  copy_data.py  create_job_xml.py  create_job_xml_segmentation.py  create_sample.py  manage_data.py  run_detection.py  run_grid.py  run_pipeline.py  run_render.py  run_segmentation.py  run_sfm.py  run_stereo.py  run_training_segment.py
code/svm/: cluster.py  genTrainData.py  grid.py  param_estimator.py  predict.py
code/tempMeanshift/: CMakeLists.txt  tempMeanshift.cpp  tempMeanshift.h  tempMeanshift_cli.cpp
code/test/: CMakeLists.txt  test_main.cpp  utility_test.cpp
code/test/googletest/: CMakeLists.txt
code/test/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
code/viewer/: CMakeLists.txt  animation.h  frame.frag  main_widget.cpp  main_widget.h  navigation.cpp  navigation.h  scene.cpp  scene.h  shader.qrc  video_blend.frag  videorenderer.h  viewer.pro
(+8 files in other folders)
